<resources>
    <string name="app_name">ShowYourFavorateSongs</string>
    <string name="btn_login">로그인</string>
    <string name="text_email">이메일</string>
    <string name="text_password">비밀번호</string>
    <string name="text_join">회원가입</string>
    <string name="text_findPw">비밀번호 찾기</string>
    <string name="text_next">다음 단계</string>
    <string name="text_password2">비밀번호 확인</string>
    <string name="text_nickname">닉네임</string>
    <string name="text_same">중복 확인</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
